[package]
name = "poc_influxdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influxdb2 = "0.4.4"
influxdb2-structmap = "0.2"
num-traits = "0.2"
tokio = { version = "1.34.0", features = ["full"] }
chrono = "0.4.31"
rand = "0.8.5"
anyhow = "1.0.75"
dotenv = "0.15.0"
futures = "0.3.29"
